[NTP::Cleanup] Remove dangling mentions of #enable-ntp-snippets.

The flag itself was renamed in
https://codereview.chromium.org/2655263003.

Bug: 739584
Change-Id: Ic7b648cda606cbd2710886c60f7f50b96f23dffa
Reviewed-on: https://chromium-review.googlesource.com/563201
Reviewed-by: Nicolas Dossou-Gbété <dgn@chromium.org>
Commit-Queue: vitaliii <vitaliii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484894}
Former-commit-id: d0f43e95839d59d443be8ad29542c788d5faad13